...
    <string name="not_available_text_book">Not Available to Borrow</string>
    <string name="yes">Yes</string>
    <string name="confirmation">Confirmation!</string>
    <string name="request_text_in_dialog">Are you sure you want to request for this book?</string>
    <string name="no">No</string>

    <string name="sign_up_title">Sign Up</string>
    <string name="forgot_pass_title">Forgot Password</string>
    <string name="book_detail_title">Book Detail</string>
    <string name="home_title">Home</string>


    <string name="recent_searches">Recent Searches</string>
    <string name="top_searches">Top Searches</string>
...
    <string name="decide">Decide</string>

    <string name="my_tasks">My Tasks</string>
    <string name="task_updated_successfully">Task updated successfully</string>
    <string name="task_not_updated">Task not updated</string>

    <string name="notifications">Notifications</string>

    <string name="my_account">My Account</string>
    <string name="my_books">My Books</string>
    <string name="books_i_borrowed">Borrowed Books</string>
    <string name="profile">Profile</string>
    <string name="accept_button">Accept</string>
...
