...
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:onClick="bottomBarItemClick">

                    <ImageView
                        android:id="@+id/notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/icon_notification" />

                    <ImageView
...
